<resources>
    <string name="app_name">Tvarkau Vilnių</string>
    <string name="title_problem_list">Pranešimų sąrašas</string>
    <string name="title_my_problem_list">Mano pranešimai</string>
    <string name="title_problem_detail">Problemos informacija</string>
    <string name="title_problems_map">Pranešimų žemėlapis</string>
    <string name="title_my_profile">Mano profilis</string>
    <string name="title_new_problem">Naujas pranešimas</string>
    <string name="title_choose_problem_type">Pranešimo tipas</string>
    <string name="choose_problem_type">Tipas</string>
    <string name="open">Atidaryti</string>
    <string name="close">Uždaryti</string>
    <string name="menu_action_filter">Pranešimų filtravimas</string>
    <string name="menu_action_submit_filter">Filtruoti pranešimus</string>
    <string name="profile_hint_email">El.paštas</string>
    <string name="profile_hint_name">Vardas Pavardė</string>
    <string name="profile_hint_telephone">Telefonas</string>
    <string name="message_notsigned">Norint pasiekti profilio informacija prašome prisijungti</string>
    <string name="title_notsigned">Vartotojas neprisijungęs</string>
    <string name="problem_send">Pranešti apie problemą</string>
    <string name="login_sign_in">Google+ prisijungimas</string>
    <string name="login_enter_anon">Anonimiškas prisijungimas</string>
    <string name="sign_in_failed">Nepavyko prisijungti naudojant Google. Patikrinkite interneto ryšį, arba prisijunkite anonimiškai.</string>
    <string name="home_report_a_problem">Naujas pranešimas</string>
    <string name="tab_list_of_reports">Pranešimai</string>
    <string name="tab_my_problems">Mano</string>
    <string name="tab_map_of_reports">Žemėlapis</string>
    <string name="tab_settings">Nustatymai</string>
    <string name="discard_changes_title">Sunaikinti jūsų pakeitimus?</string>
    <string name="discard_changes_positive">Sunaikinti</string>
    <string name="discard_changes_negative">Toliau redaguoti</string>
    <string name="report_status_in_progress">Vykdoma</string>
    <string name="report_status_done">Atlikta</string>
    <string name="choose_photos_title">Pasirinkite nuotraukas</string>
    <string name="error_network_generic">Įvyko tinklo klaida, bandykite dar kartą</string>
    <string name="error_retrieving_reports">Įvyko klaida siunčiant užregistruotus pranešimus</string>
    <string name="empty_state_all_reports_line_1">Rezultatų nerasta</string>
    <string name="empty_state_all_reports_line_2">Pabandykite kitus paieškos kriterijus</string>
    <string name="error_failed_to_determine_address">Nepavyko nustatyti adreso</string>
    <string name="error_empty_field">Tuščias laukelis</string>
    <string name="error_email_incorrect">Blogas el. pašto adresas</string>
    <string name="error_phone_number_incorrect">Blogas telefono numeris</string>
    <string name="profile_submit">Išsaugoti</string>
    <string name="hint_location">Vieta</string>
    <string name="hint_description">Trumpas aprašymas</string>
    <string name="report_submit_hint_personal_code">Asmens kodas</string>
    <string name="hint_new_report_licence_plate">Automobilio valst. nr.</string>
    <string name="hint_report_date_time">Pažeidimo data ir laikas</string>
    <string name="no_photo">Nėra nuotraukos</string>
    <string name="hint_problem_type">Tipas</string>
    <string name="error_location_incorrect">Pasirinkote vietą ne Vilniaus mieste.</string>
    <string name="choose_again">Perrinkti</string>
    <string name="title_about">Apie</string>
    <string name="support_us">Norite mus paremti?</string>
    <string name="rate_app">Įvertinkite programėlę</string>
    <string name="report_bug">Praneškite apie klaidą</string>
    <string name="facebook_page">Sekite Facebook</string>
    <string name="meetup_page">Prisijunkite prie Meetup grupės</string>
    <string name="municipality_contacts">Vilniaus miesto savivaldybės kontaktai</string>
    <string name="about_text_top">Norite pranešti apie duobę kelyje, sugedusį šviesofoso signalą ar grafiti einant pakeliui? Su Tvarkau Vilnių programėle tai galite padaryti itin paprastai. Programėlė identifikuoja jūsų lokaciją ir leidžia pridėti nuotrauką prie pastebėtos problemos.</string>
    <string name="about_text_below">Pranešimai automatiškai nusiunčiami į Vilniaus miesto savivaldybės sistemą, kur yra nukreipiami į reikiamus departamentus sprendimams. Programėlėje galite sekti savo ir kitų vartotojų pranešimų statusą.</string>
    <string name="built_by">Dabartinė programėlės versija sukurta entuziastingų savanorių</string>
    <string name="version">Versija</string>
    <string name="visit_our_website">Aplankykite mūsų puslapį</string>
    <string name="send_email_to">Norėdami susisiekti, rašykite:</string>
    <string name="contact_email_subject">Pranešimas apie klaidą</string>
    <string name="ok">Gerai</string>
    <string name="municipality_phone">1664</string>
    <string name="municipality_email">e.vicemeras@vilnius.lt</string>
    <string name="error_no_problems_in_list">Nepavyko užkrauti problemų</string>
    <string name="error_no_problem">Nepavyko užkrauti problemos</string>
    <string name="problem_description_title">Problemos aprašymas</string>
    <string name="problem_id">Pranešimo Nr.</string>
    <string name="issue">Pranešimas</string>
    <string name="answer">Atsakymas</string>
    <string name="error_need_camera_and_storage_permission">Reikalingas kameros ir duomenų vietos nuotraukai leidimai</string>
    <string name="error_problem_description_is_empty">Prašome įvesti problemos aprašymą</string>
    <string name="error_problem_location_is_empty">Prašome pasirinkti problemos vietą</string>
    <string name="error_problem_type_is_empty">Prašome pasirinkti problemos tipą</string>
    <string name="error_minimum_photo_requirement">Prašome prisegti mažiausiai 2 nuotraukas</string>
    <string name="error_report_fill_date_time">Nurodykite įvykio laiką ir datą</string>
    <string name="error_new_report_fill_licence_plate">Nurodykite automobilio valstybinį numerį</string>
    <string name="problem_successfully_sent">Jūsų pranešimas sėkmingai išsiųstas</string>
    <string name="error_submitting_problem">Atsiprašome, įvyko serverio klaida. Bandykite dar sykį.</string>
    <string name="sending_problem">Siunčiama...</string>
    <string name="check_google_play_services">Atnaujinkite Google Play Paslaugas</string>
    <string name="my_problems_empty">Mano pranešimai tušti</string>
    <string name="no_internet">Patikrinkite interneto ryšį</string>
    <string name="server_does_not_respond">Atsiprašome, problemos su serveriu</string>
    <string name="try_again">Bandykite dar sykį</string>
    <string name="no_connection">Nepavyko prisijungti</string>
    <string name="thanks_to">Ypatingai dėkojame</string>
    <string name="contribute_with_code">Prisidėkite savo kodu</string>
    <string name="thanks_to_contributors"><a href="https://lt.linkedin.com/in/platonaite">Ineta Platonaitė</a>,
        <a href="https://lt.linkedin.com/in/vycius">Karolis Vyčius</a>,
        <a href="https://lt.linkedin.com/in/viliusk">Vilius Kraujutis</a>,
        <a href="https://lt.linkedin.com/in/povilaspoderskis">Povilas Poderskis</a>,
        <a href="https://lt.linkedin.com/in/renatbuga">Renat Buga</a>,
        <a href="https://lt.linkedin.com/in/mjurkus">Martynas Jurkus</a></string>
    <string name="cancel">Atšaukti</string>
    <string name="take_photo">Fotografuoti</string>
    <string name="choose_photos_from_gallery">Pasirinkti iš galerijos</string>
    <string name="add_photos">Pridėkite nuotraukų</string>
    <string name="error_taking_image_from_server">Įvyko problema pasirenkant nuotrauką iš galerijos, išsaugokite nuotrauką telefone ir rinkitės dar sykį.</string>
    <string name="photo_capture_error">Nepavyko nufotografuoti, bandykite dar sykį</string>
    <string name="error_need_location_permission">Reikalingas lokacijos leidimas</string>
    <string name="error_registration_not_working">Registracija kol kas neveikia. Visi pranešimai anonimiški.</string>
    <string name="app_version">versija</string>
    <string name="transport_vehicle_report_type_contacts_needed">Transporto priemonių stovėjimo tvarkos pažeidimai (Būtina pridėti nuotraukas)</string>
    <string name="error_loading_report_types">Atsiprašome, nepavyko užkrauti problemos tipų sąrašo. Bandykite dar sykį.</string>
    <string name="home_settings">Nustatymai</string>
    <string name="setting_anonymous_title">Pranešti anonimiškai</string>
    <string name="setting_anonymous_explanation">Pridėkite asmeninius duomenis norėdami pranešinėti neanonimiškai</string>
    <string name="edit_personal_data">Redaguoti mano duomenis</string>
    <string name="setting_import_reports">Prisijungti į vilnius.lt profilį</string>
    <string name="setting_import_reports_explanation">Importuoti pranešimus iš ankstesnės programėlės</string>
    <string name="setting_about">Apie</string>
    <string name="setting_about_summary">Versija %1$s</string>
    <string name="title_settings">Nustatymai</string>
    <string name="title_edit_contacts">Asmeninė informacija</string>
    <string name="error_profile_fill_name">Įveskite vardą ir pavardę</string>
    <string name="error_profile_fill_email">Įveskite el. pašto adresą</string>
    <string name="error_profile_fill_telephone">Įveskite telefono numerį</string>
    <string name="personal_data_saved">Jūsų duomenys išsaugoti</string>
    <string name="profile_hint_personal_code">Asmens kodas</string>
    <string name="error_profile_fill_personal_code">Įveskite asmens kodą</string>
    <string name="error_profile_invalid_personal_code">Patikrinkite, ar teisingai įvedėte asmens kodą</string>
    <string name="error_profile_email_invalid">Patikrinkite, ar teisingai įvedėte el. paštą</string>
    <string name="error_profile_phone_invalid">Patikrinkite, ar teisingai įvedėte telefono numerį</string>
    <string name="error_new_report_enter_personal_code">Įveskite asmens kodą</string>
    <string name="error_new_report_invalid_personal_code">Patikrinkite, ar teisingai įvedėte asmens kodą</string>
    <string name="sign_in_to_vilnius_account">Prisijunkite prie vilnius.lt profilio</string>
    <string name="vilnius_account_hint_password">Slaptažodis</string>
    <string name="vilnius_account_hint_email">El. paštas</string>
    <string name="error_fill_vilnius_account_email">Įveskite vilnius.lt profilio el. paštą</string>
    <string name="error_fill_vilnius_account_password">Įveskite vilnius.lt profilio slaptažodį</string>
    <string name="error_vilnius_account_email_invalid">Patikrinkite el. pašto adresą</string>
    <string name="my_problems_send_report">Siųskite pranešimą</string>
    <string name="my_problems_or">arba</string>
    <string name="my_problems_import_from_vilnius_account">importuokite iš Vilnius.lt profilio</string>
    <string name="photo_instructions_title">Padarykite mažiausiai dvi nuotraukas</string>
    <string name="photo_instructions_first_photo_hint">Nuotrauka, kurioje aiškiai matosi automobilis ir kelio ženklas ar kelio ženklinimas, draudžiantis stovėjimą</string>
    <string name="photo_instructions_second_photo_hint">Nuotrauka, kurioje iš arti matomas automobilio numeris ir ar yra (nėra) palikta neįgaliųjų asmenų automobilių statymo kortelė</string>
    <string name="photo_instructions_don_show_again">Daugiau nerodyti</string>
    <string name="photo_instructions_button_ok">Gerai</string>
    <string name="report_filter_statuses_title">Pranešimo tipas</string>
    <string name="report_filter_report_types_title">Kategorija</string>
    <string name="report_filter_status_new">Naujausi</string>
    <string name="report_filter_status_registered">Neatsakyti</string>
    <string name="report_filter_status_completed">Atlikti</string>
    <string name="about_privacy_policy">Privatumo politika</string>
    <string name="preferences_screen_title">Nustatymai</string>
</resources>