<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/about_text_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/about_text_top"
                android:textColor="@color/black_87" />

            <TextView
                android:id="@+id/about_text_below"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="32dp"
                android:text="@string/about_text_below"
                android:textColor="@color/black_87" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tvarkau_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:src="@drawable/ic_logo_about" />


                <TextView
                    android:id="@+id/version_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:textColor="@color/black_87" />

                <TextView
                    android:id="@+id/built_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="8dp"
                    android:text="@string/built_by"
                    android:textColor="@color/black_87" />

                <ImageView
                    android:id="@+id/code_for_vilnius_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_c4v" />

                <TextView
                    android:id="@+id/thanks_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/thanks_to"
                    android:textColor="@color/black_87" />

                <TextView
                    android:id="@+id/thanks_to_contributors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="8dp"
                    android:paddingBottom="32dp"
                    android:text="@string/thanks_to_contributors"
                    android:textColorLink="@color/colorPrimary" />

                <TextView
                    android:id="@+id/support_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/support_us"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black_87" />

                <TextView
                    android:id="@+id/report_bug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/report_bug"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/rate_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/rate_app"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/contribute_with_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/contribute_with_code"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/visit_our_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/visit_our_website"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/facebook_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/facebook_page"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/meetup_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="32dp"
                    android:text="@string/meetup_page"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/municipality_contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:text="@string/municipality_contacts"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black_87" />

                <LinearLayout
                    android:id="@+id/phone_select_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:id="@+id/telephone_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingRight="8dp"
                        android:src="@drawable/ic_phone_black_about" />

                    <TextView
                        android:id="@+id/municipality_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/municipality_phone"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/municipality_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="32dp"
                    android:text="@string/municipality_email"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/about_privacy_policy"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>