<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        style="@style/ReportFilter.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/report_filter_statuses_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/filter_report_status_new"
            style="@style/ReportFilter.Status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/report_filter_status_new" />

        <TextView
            android:id="@+id/filter_report_status_registered"
            style="@style/ReportFilter.Status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/report_filter_status_registered" />

        <TextView
            android:id="@+id/filter_report_status_completed"
            style="@style/ReportFilter.Status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/report_filter_status_completed" />
    </LinearLayout>

    <TextView
        style="@style/ReportFilter.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:text="@string/report_filter_report_types_title" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/filter_report_types"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fadeScrollbars="false"
        android:paddingBottom="32dp"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/view_filter_report_type_row" />
</LinearLayout>
