<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_report_list_recycler_view" />

    <LinearLayout
        android:id="@+id/my_problems_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="120dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:src="@drawable/ic_empty_state_my_reports" />

        <LinearLayout
            android:id="@+id/my_problems_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-regular"
                android:paddingBottom="8dp"
                android:text="@string/my_problems_empty"
                android:textColor="@color/black_38"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-regular"
                android:text="@string/my_problems_send_report"
                android:textColor="@color/black_38" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-regular"
                android:text="@string/my_problems_or"
                android:textColor="@color/black_38" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-regular"
                android:text="@string/my_problems_import_from_vilnius_account"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>